--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -1,12 +1,14 @@
 {% extends "_layouts/_root.html" %}
 
+{# TODO: move to layout #}
 {% block custom_head %}
-    <link rel="stylesheet" href="/static/build/css/docs/docs.css" />
+    <link rel="stylesheet" href="/static/build/css/docs/site.css" />
 {% endblock %}
 
 {% block body %}
+    {# TODO: move to layout #}
     <header id="navigation" class="p-navigation">
-      <div class="p-navigation__row--full-width">
+      <div class="p-navigation__row">
         <div class="p-navigation__banner">
           <div class="p-navigation__logo">
             <a class="p-navigation__item" href="/">
@@ -40,8 +42,10 @@
     </header>
 
     <hr class="u-no-margin u-hide--small">
-    <div class="docs-container">
-      <aside class="p-sidebar">
+
+    <div class="p-strip is-shallow is-bordered">
+    <div class="l-fixed-width--with-sidebar">
+      <aside class="l-aside">
         <nav class="p-side-navigation">
 
             <ul class="p-side-navigation__list">
@@ -149,19 +153,15 @@
 
       </aside>
 
-      <main class="p-content" id="main-content">
+      <main class="l-main" id="main-content">
         {% block banner %}{% endblock %}
-        <div class="p-strip is-shallow">
-          <div class="p-content__row">
-            {% block content %}{{ content | safe }}{% endblock content %}
-          </div>
-        </div>
 
-        <hr>
+        {% block content %}{{ content | safe }}{% endblock content %}
 
-        {% include "_layouts/_footer.html" %}
       </main>
 
+      {# TODO: remove or reimplement page TOC #}
+      <!--
       <aside id="side-content" class="u-hide--small p-aside js-contents" style="display: none">
         <div class="p-aside__section">
           <h4 class="p-aside__header">Contents</h4>
@@ -170,6 +170,7 @@
           </nav>
         </div>
       </aside>
+      -->
 
       <script>
         let aside = document.querySelector('.js-contents');
@@ -198,6 +199,9 @@
         }
       </script>
     </div>
+    </div>
+
+    {% include "_layouts/_footer.html" %}
     <script src="/static/js/scripts.js"></script>
     <script defer src="https://static.codepen.io/assets/embed/ei.js"></script>
     <script defer src="/static/js/example.js"></script>
