--- a/templates/docs/examples/index.html
+++ b/templates/docs/examples/index.html
@@ -1,62 +1,71 @@
-{% extends "_layouts/docs.html" %}
+{% extends "_layouts/_root.html" %}
+
+{% block custom_head %}
+    <link rel="stylesheet" href="/static/build/css/build.css" />
+{% endblock %}
 
 {% block title %}Component examples{% endblock %}
 
-{% block content %}
-<h2>Component examples</h2>
+{% block body %}
+<div class="p-strip is-bordered">
+  <div class="u-fixed-width">
+    <h2>Component examples</h2>
+    <hr>
+  </div>
 
-<hr>
+  <div class="row">
+    <div class="col-3">
+      <h3>Base elements</h3>
+      <nav>
+        <ul class="p-list">
+          {% for example in examples.base %}
+            <li class="p-list__item">
+              <a href="/docs/examples/{{ example.path }}" class="p-link">{{ example.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
+    </div>
+    <div class="col-3">
+      <h3>Components</h3>
+      <nav>
+        <ul class="p-list">
+          {% for example in examples.patterns %}
+            <li class="p-list__item">
+              <a href="/docs/examples/{{ example.path }}" class="p-link">{{ example.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
+    </div>
+    <div class="col-3">
+      <h3>Utilities</h3>
+      <nav>
+        <ul class="p-list">
+          {% for example in examples.utilities %}
+            <li class="p-list__item">
+              <a href="/docs/examples/{{ example.path }}" class="p-link">{{ example.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
+    </div>
+    <div class="col-3">
+      <h3>Templates</h3>
+      <nav>
+        <ul class="p-list">
+          {% for example in examples.templates %}
+            <li class="p-list__item">
+              <a href="/docs/examples/{{ example.path }}" class="p-link">{{ example.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
+    </div>
+  </div>
 
-<div class="row">
-  <div class="col-3">
-    <h3>Base elements</h3>
-    <nav>
-      <ul class="p-list">
-        {% for example in examples.base %}
-          <li class="p-list__item">
-            <a href="/docs/examples/{{ example.path }}" class="p-link">{{ example.title }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </nav>
-  </div>
-  <div class="col-3">
-    <h3>Components</h3>
-    <nav>
-      <ul class="p-list">
-        {% for example in examples.patterns %}
-          <li class="p-list__item">
-            <a href="/docs/examples/{{ example.path }}" class="p-link">{{ example.title }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </nav>
-  </div>
-  <div class="col-3">
-    <h3>Utilities</h3>
-    <nav>
-      <ul class="p-list">
-        {% for example in examples.utilities %}
-          <li class="p-list__item">
-            <a href="/docs/examples/{{ example.path }}" class="p-link">{{ example.title }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </nav>
-  </div>
-  <div class="col-3">
-    <h3>Templates</h3>
-    <nav>
-      <ul class="p-list">
-        {% for example in examples.templates %}
-          <li class="p-list__item">
-            <a href="/docs/examples/{{ example.path }}" class="p-link">{{ example.title }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </nav>
+  <div class="u-fixed-width">
+    <p><a href="/docs/examples/standalone">Examples using standalone component CSS for testing/debugging</a></p>
   </div>
 </div>
-
-<p><a href="/docs/examples/standalone">Examples using standalone component CSS for testing/debugging</a></p>
 {% endblock %}
