--- a/templates/docs/examples/standalone.html
+++ b/templates/docs/examples/standalone.html
@@ -1,41 +1,45 @@
-{% extends "_layouts/docs.html" %}
+{% extends "_layouts/_root.html" %}
+
+{% block custom_head %}
+    <link rel="stylesheet" href="/static/build/css/build.css" />
+{% endblock %}
 
 {% block title %}Standalone component examples{% endblock %}
 
-{% block content %}
-<h2>Standalone component examples</h2>
-
-<hr>
-
-<div class="row">
-  <div class="col-8">
-    <p>Examples below use CSS built with single pattern included with base styles instead of the whole Vanilla framework CSS file.</p>
+{% block body %}
+<div class="p-strip is-bordered">
+  <div class="row">
+    <div class="col-12">
+      <h2>Standalone component examples</h2>
+      <hr>
+      <p>Examples below use CSS built with single pattern included with base styles instead of the whole Vanilla framework CSS file.</p>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-3">
-    <h3>Base elements</h3>
-    <nav>
-      <ul class="p-list">
-        {% for example in examples.base %}
-          <li class="p-list__item">
-            <a href="/docs/examples/standalone/{{ example.path }}" class="p-link">{{ example.title }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </nav>
-  </div>
-  <div class="col-3">
-    <h3>Components</h3>
-    <nav>
-      <ul class="p-list">
-        {% for example in examples.patterns %}
-          <li class="p-list__item">
-            <a href="/docs/examples/standalone/{{ example.path }}" class="p-link">{{ example.title }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-    </nav>
+  <div class="row">
+    <div class="col-3">
+      <h3>Base elements</h3>
+      <nav>
+        <ul class="p-list">
+          {% for example in examples.base %}
+            <li class="p-list__item">
+              <a href="/docs/examples/standalone/{{ example.path }}" class="p-link">{{ example.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
+    </div>
+    <div class="col-3">
+      <h3>Components</h3>
+      <nav>
+        <ul class="p-list">
+          {% for example in examples.patterns %}
+            <li class="p-list__item">
+              <a href="/docs/examples/standalone/{{ example.path }}" class="p-link">{{ example.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
+    </div>
   </div>
 </div>
 {% endblock %}
