--- a/templates/docs/examples/patterns/media-object/media-object-large.html
+++ b/templates/docs/examples/patterns/media-object/media-object-large.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="p-media-object--large">
-  <img src="https://api.jujucharms.com/charmstore/v5/mysql-58/icon.svg" class="p-media-object__image">
+  <img src="https://assets.ubuntu.com/v1/80cd67d3-mysql.svg" class="p-media-object__image">
   <div class="p-media-object__details">
     <h1 class="p-media-object__title">Mysql</h1>
     <p class="p-media-object__content">By mysql-charmers</p>
