--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,7 @@
   <div class="u-fixed-width"><a href="https://ubuntu.com/blog/topics/design" class="p-button--neutral">View more from our blog</a></div>
 </div>
 
-<div class="p-strip">
+<div class="p-strip is-bordered">
   <div class="row">
     <h2 class="p-muted-heading u-align-text--center">Who&rsquo;s using Vanilla</h2>
   </div>
@@ -180,7 +180,7 @@
   </div>
 </div>
 
-<div class="p-strip--light">
+<div class="p-strip">
   <div class="row">
     <div class="col-3">
       <h2 class="p-heading--3">Contribute</h2>
