Changes example to not use “Information:”

--- a/templates/docs/examples/patterns/notifications/information.html
+++ b/templates/docs/examples/patterns/notifications/information.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="p-notification--information">
   <p class="p-notification__response">
-    <span class="p-notification__status">Information:</span>Anyone with access can view your invited users.
+    <span class="p-notification__status">Permissions changed:</span>Anyone with access can view your invited users.
   </p>
 </div>
 {% endblock %}
