Update all examples and side nav documentation

--- a/templates/docs/examples/patterns/side-navigation/docs.html
+++ b/templates/docs/examples/patterns/side-navigation/docs.html
@@ -49,7 +49,7 @@
             <a class="p-side-navigation__link" href="#">Network testing</a>
           </li>
           <li class="p-side-navigation__item ">
-            <a class="p-side-navigation__link is-active" href="#">Commissioning and hardware testing scripts</a>
+            <a class="p-side-navigation__link" aria-current="page" href="#">Commissioning and hardware testing scripts</a>
           </li>
         </ul>
       </li>
