--- a/templates/docs/examples/patterns/side-navigation/icons.html
+++ b/templates/docs/examples/patterns/side-navigation/icons.html
@@ -20,7 +20,7 @@
 
     <ul class="p-side-navigation__list">
       <li class="p-side-navigation__item">
-        <a class="p-side-navigation__link is-active" href="#"><i class="p-icon--information p-side-navigation__icon"></i>Information</a>
+        <a class="p-side-navigation__link" aria-current="page" href="#"><i class="p-icon--information p-side-navigation__icon"></i>Information</a>
       </li>
       <li class="p-side-navigation__item">
         <a class="p-side-navigation__link" href="#"><i class="p-icon--user p-side-navigation__icon"></i>Users</a>
