--- a/templates/docs/examples/patterns/side-navigation/raw-html.html
+++ b/templates/docs/examples/patterns/side-navigation/raw-html.html
@@ -45,7 +45,7 @@
                     <span>Third level text</span>
                   </li>
                   <li>
-                    <a class="is-active" href="#">Third level active link</a>
+                    <a aria-current="page" href="#">Third level aria current link</a>
                   </li>
                 </ul>
               </li>
