--- a/templates/docs/examples/templates/maas-docs.html
+++ b/templates/docs/examples/templates/maas-docs.html
@@ -149,7 +149,7 @@
                 <a class="p-side-navigation__link" href="#">Hardware testing</a>
               </li>
               <li class="p-side-navigation__item ">
-                <a class="p-side-navigation__link is-active" href="#">Network testing</a>
+                <a class="p-side-navigation__link" aria-current="page" href="#">Network testing</a>
               </li>
               <li class="p-side-navigation__item ">
                 <a class="p-side-navigation__link" href="#">Commissioning and hardware testing scripts</a>
