--- a/templates/docs/examples/templates/snapcraft-publicise.html
+++ b/templates/docs/examples/templates/snapcraft-publicise.html
@@ -148,7 +148,7 @@
         <nav class="p-side-navigation">
           <ul class="p-side-navigation__list">
             <li class="p-side-navigation__item">
-              <a class="p-side-navigation__link is-active" href="#publicise/">Snap Store buttons</a>
+              <a class="p-side-navigation__link" aria-current="page" href="#publicise">Snap Store buttons</a>
             </li>
             <li class="p-side-navigation__item">
               <a class="p-side-navigation__link" href="#publicise/badges">GitHub badges</a>
