Support both aria-current "page" and "true" values in side navigation

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -433,13 +433,15 @@
 
     &:hover,
     &.is-active,
-    &[aria-current] {
+    &[aria-current='page'],
+    &[aria-current='true'] {
       background: $color-sidenav-item-background-highlight;
       color: $color-sidenav-text-active;
     }
 
     &.is-active,
-    &[aria-current] {
+    &[aria-current='page'],
+    &[aria-current='true'] {
       @include vf-highlight-bar($color-sidenav-item-border-highlight, left);
     }
   }
@@ -509,13 +511,15 @@
 
     &:hover,
     &.is-active,
-    &[aria-current] {
+    &[aria-current='page'],
+    &[aria-current='true'] {
       background: $color-sidenav-item-background-highlight;
       color: $color-sidenav-text-active;
     }
 
     &.is-active,
-    &[aria-current] {
+    &[aria-current='page'],
+    &[aria-current='true'] {
       @include vf-highlight-bar($color-sidenav-item-border-highlight, left);
     }
   }
