--- a/templates/docs/examples/patterns/side-navigation/_default.html
+++ b/templates/docs/examples/patterns/side-navigation/_default.html
@@ -42,7 +42,7 @@
                 <a class="p-side-navigation__link" href="#"><span class="u-truncate">Third level link with label that is truncated because it's long long long long long</span><div class="p-side-navigation__status"><span class="p-label--in-progress">In progress</span></div></a>
               </li>
               <li class="p-side-navigation__item ">
-                <a class="p-side-navigation__link" aria-current="page" href="#">Third level aria-current link</a>
+                <a class="p-side-navigation__link" aria-current="page" href="#">Third level active link</a>
               </li>
               <li class="p-side-navigation__item ">
                 <a class="p-side-navigation__link" href="#">Third level link with status<div class="p-side-navigation__status"><i class="p-icon--success"></i></div></a>
