Clarify colour var purpouse

--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -19,7 +19,7 @@
     @include vf-button-pattern(
       $button-disabled-background-color: $color-x-light,
       $button-disabled-border-color: $color-x-light,
-      $button-active-background-color: darken($color-light, $active-darken-percentage),
+      $button-active-background-color: darken($color-light, $active-background-darken-percentage),
       $button-active-border-color: $color-x-light
     );
   }
@@ -49,12 +49,12 @@
       $button-background-color: $color-brand,
       $button-border-color: $color-brand,
       $button-text-color: vf-contrast-text-color($color-brand),
-      $button-hover-background-color: darken($color-brand, $hover-darken-percentage),
-      $button-hover-border-color: darken($color-brand, $hover-darken-percentage),
+      $button-hover-background-color: darken($color-brand, $hover-background-darken-percentage),
+      $button-hover-border-color: darken($color-brand, $hover-background-darken-percentage),
       $button-disabled-background-color: $color-brand,
       $button-disabled-border-color: $color-brand,
-      $button-active-background-color: darken($color-brand, $active-darken-percentage),
-      $button-active-border-color: darken($color-brand, $active-darken-percentage)
+      $button-active-background-color: darken($color-brand, $active-background-darken-percentage),
+      $button-active-border-color: darken($color-brand, $active-background-darken-percentage)
     );
   }
 
@@ -71,12 +71,12 @@
       $button-background-color: $color-positive,
       $button-border-color: $color-positive,
       $button-text-color: $color-x-light,
-      $button-hover-background-color: darken($color-positive, $hover-darken-percentage),
-      $button-hover-border-color: darken($color-positive, $hover-darken-percentage),
+      $button-hover-background-color: darken($color-positive, $hover-background-darken-percentage),
+      $button-hover-border-color: darken($color-positive, $hover-background-darken-percentage),
       $button-disabled-background-color: $color-positive,
       $button-disabled-border-color: $color-positive,
-      $button-active-background-color: darken($color-positive, $active-darken-percentage),
-      $button-active-border-color: darken($color-positive, $active-darken-percentage)
+      $button-active-background-color: darken($color-positive, $active-background-darken-percentage),
+      $button-active-border-color: darken($color-positive, $active-background-darken-percentage)
     );
 
     @include vf-focus($color-focus-positive);
@@ -95,12 +95,12 @@
       $button-background-color: $color-negative,
       $button-border-color: $color-negative,
       $button-text-color: $color-x-light,
-      $button-hover-background-color: darken($color-negative, $hover-darken-percentage),
-      $button-hover-border-color: darken($color-negative, $hover-darken-percentage),
+      $button-hover-background-color: darken($color-negative, $hover-background-darken-percentage),
+      $button-hover-border-color: darken($color-negative, $hover-background-darken-percentage),
       $button-disabled-background-color: $color-negative,
       $button-disabled-border-color: $color-negative,
-      $button-active-background-color: darken($color-negative, $active-darken-percentage),
-      $button-active-border-color: darken($color-negative, $active-darken-percentage)
+      $button-active-background-color: darken($color-negative, $active-background-darken-percentage),
+      $button-active-border-color: darken($color-negative, $active-background-darken-percentage)
     );
 
     @include vf-focus($color-focus-negative);
@@ -119,9 +119,9 @@
       $button-background-color: $color-transparent,
       $button-border-color: $color-transparent,
       $button-text-color: $color-x-dark,
-      $button-hover-background-color: darken($color-x-light, $hover-darken-percentage),
+      $button-hover-background-color: darken($color-x-light, $hover-background-darken-percentage),
       $button-hover-border-color: $color-transparent,
-      $button-active-background-color: darken($color-light, $active-darken-percentage),
+      $button-active-background-color: darken($color-light, $active-background-darken-percentage),
       $button-active-border-color: $color-transparent
     );
   }
