--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -1,10 +1,7 @@
 // Global color settings
 $color-transparent: transparent !default;
 
-$color-brand: #333 !default;
-$color-accent: $color-brand !default;
-$color-accent-background: $color-accent !default;
-
+// Generic gray values (used in elements that have not been themed yet)
 $color-x-light: #fff !default;
 $color-light: #f7f7f7 !default;
 $color-mid-x-light: #e5e5e5 !default;
@@ -15,22 +12,36 @@ $color-dark: #111 !default;
 $color-x-dark: #000 !default;
 $color-input-shadow: rgba($color-x-dark, 0.12) !default;
 
-$color-link: #06c !default;
-$color-link-visited: #7d42b8 !default;
-$color-focus: #2e96ff !default;
-$color-focus-positive: #003008 !default;
-$color-focus-negative: #3b0006 !default;
-
+// SEMANTIC COLOURS
 $color-negative: #c7162b !default;
 $color-caution: #f99b11 !default;
 $color-positive: #0e8620 !default;
 $color-information: #24598f !default;
 
-$hover-darken-percentage: 10%;
-$active-darken-percentage: 15%;
+// STATE VARIABLES
 $disabled-element-opacity: 0.33;
 
+// Link colors
+$color-link: #06c !default;
+$color-link-visited: #7d42b8 !default;
+$color-focus: #2e96ff !default;
+
+// Focus modifications to meet AA 3:1 contrast ratio against
+// button background for positive/negative buttons
+$color-focus-positive: #003008 !default;
+$color-focus-negative: #3b0006 !default;
+
+// Button background color changes
+$hover-background-darken-percentage: 10%;
+$active-background-darken-percentage: 15%;
+
+// NON-SEMANTIC COLOURS
 $color-label-validated: #006b75;
+
+// Branding colors
+$color-brand: #333 !default;
+$color-accent: $color-brand !default;
+$color-accent-background: $color-accent !default;
 
 $states: (
   error: $color-negative,
