--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -1,6 +1,7 @@
 @import 'settings';
 @import 'base';
 // Patterns
+
 @import 'patterns_accordion';
 @import 'patterns_article-pagination';
 @import 'patterns_breadcrumbs';
@@ -58,6 +59,7 @@
 @import 'utilities_layout';
 @import 'utilities_margin-collapse';
 @import 'utilities_max-width';
+@import 'utilities_muted-text';
 @import 'utilities_off-screen';
 @import 'utilities_padding-collapse';
 @import 'utilities_show';
@@ -88,6 +90,7 @@
   @include vf-p-grid;
   @include vf-p-heading-icon;
   @include vf-p-headings;
+
   @include vf-p-icons;
   @include vf-p-image;
   @include vf-p-inline-images;
@@ -132,6 +135,8 @@
   @include vf-u-padding-collapse;
   @include vf-u-show;
   @include vf-u-truncate;
+  @include vf-u-text-muted;
+
   @include vf-u-vertical-spacing;
   @include vf-u-vertically-center;
   @include vf-u-visualise-baseline;
