--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -163,6 +163,7 @@ $spv-list-item--inner: null;
     @extend %numbered-step-title;
   }
 
+  // Indent titles
   @for $i from 6 through 1 {
     // Bullet sizes for each heading level
     $bullet-width: map-get($line-heights, default-text);
@@ -186,15 +187,29 @@ $spv-list-item--inner: null;
           width: $bullet-width;
         }
       }
+    }
 
-      .p-stepped-list & + .p-stepped-list__content {
-        @media (max-width: $breakpoint-heading-threshold) {
-          margin-left: $bullet-width-mobile + $sph-inner;
-        }
+    .p-stepped-list h#{$i}.p-stepped-list__title + .p-stepped-list__content {
+      @media (max-width: $breakpoint-heading-threshold) {
+        margin-left: $bullet-width-mobile + $sph-inner;
+      }
 
-        @media (min-width: $breakpoint-heading-threshold) {
-          margin-left: $bullet-width + $sph-inner;
-        }
+      @media (min-width: $breakpoint-heading-threshold) {
+        margin-left: $bullet-width + $sph-inner;
+      }
+    }
+
+    .p-stepped-list--detailed h#{$i}.p-stepped-list__title + .p-stepped-list__content {
+      @media (max-width: $breakpoint-heading-threshold) {
+        margin-left: $bullet-width-mobile + $sph-inner;
+      }
+
+      @media (min-width: $breakpoint-heading-threshold) {
+        margin-left: $bullet-width + $sph-inner;
+      }
+
+      @media (min-width: $threshold-6-12-col) {
+        margin-left: 0;
       }
     }
   }
